# slide-tiling

./: .gitignore  README.md  pyproject.toml
data/: średnice.xlsx  średnice_new.xlsx
src/: 10_Martyna_splitting_roi_for_yolo.ipynb  11_adding_annotations.ipynb  12_create_generated_dataset.ipynb  13_assign_coordinates_to_tiles.ipynb  21_09830A1_19.xml  22_07610A1_7.xml  22_08403A1_7.xml  22_11614A1_7.xml  22_13060A1_10.xml  22_13061A1_9.xml  22_14908A1_7.xml  22_16277A1_7.xml  22_16278A1_7.xml  2_create_roi_dataset.ipynb  3_test_tiling.ipynb  4_create_tile_dataset.ipynb  8_adding_annotatons.ipynb  test_tiling_1.ipynb  test_tiling_2.ipynb  test_tiling_3.ipynb  xml_parser.ipynb
src/00_docs/: bbox_estimation.csv  bbox_estimation.md  yolo_data_fromat.md
src/adding_adnotations/: adding_to_xml.py
src/asap_loader/: __init__.py
src/asap_loader/annotation/objects/: annotation_object.py  group.py  point.py  polygon.py  rectangle.py  region.py
src/asap_loader/annotation/xml/: annotation.py  annotation_container.py  annotation_group.py  coordinate.py
src/asap_loader/wsi/: annotated_wsi.py
src/slide_tiling/: __init__.py  regions_of_interest.py  tile_coordinates.py  tiling.py
src/yolo_dataset/: directories.py
