[project]
name = "slide-tiling-0-1-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Małgorzata Sokół", email = "malgorzata@e-sokol.pl" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
