[project]
name = "slide-tiling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Małgorzata Sokół", email = "malgorzata@e-sokol.pl" }
]
requires-python = ">=3.10"
dependencies = [
    "histolab>=0.7.0",
    "pandas>=2.1.0",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
