[project]
name = "slide_tiling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Małgorzata Sokół", email = "malgorzata@e-sokol.pl" }
]
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.14.0",
    "histolab>=0.7.0",
    "nbformat>=5.10.4",
    "opencv-python>=4.8.1.78",
    "pandas>=2.1.0",
    "plotly>=6.3.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
